# Honey

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
public/: F-100955 - Copy.xls  F-100958.xls  sifarnik copy.xls
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  exel.rs  lib.rs  main.rs  types.rs
src/components/: BarcodeModal.jsx  Header.jsx  NameUpdateModal.jsx  PriceUpdateModal.jsx  TableView.jsx
src/components/BottomPanel/: BarcodePanel.jsx  BottomPanel.jsx  OperationsTab.jsx  SettingsTab.jsx
src/context/: DataContext.jsx  LogContext.jsx  SettingsContext.jsx  index.js
src/i18n/: LanguageContext.jsx  translations.js
